Static analysis; clean up